# butterfly_feedback_pub

./: .gitignore  .gitmodules  CMakeLists.txt  make.sh  overturn.sh  plot.py
configs/: config.json
scripts/: plot.py  reset_interface.sh
src/: butterfly.cpp  butterfly.h  cam_iface.cpp  cam_iface.h  common.cpp  device_manager.h  event_timer.h  filters.h  math_helpers.h  matrix.h  measurements.cpp  moving_average.h  overturn_controller.cpp  overturn_controller.h  serializer.h  servo_iface.h  servo_protocol.h  splines.cpp  splines.h  sync_controller.cpp
tests/: CMakeLists.txt  test.cpp  test_cam.cpp  test_moving_average.cpp  test_servo_control.cpp  test_servo_pos.cpp
